// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Prueba en el componente <GifGrid /> Debe de mostrar los item cuando se cargan imgs useFetchGif 1`] = `
<Fragment>
  <h3
    className="animate__animated animate__fadeIn"
  >
    Dragon Ball
  </h3>
  <div
    className="card-grid"
  >
    <GifGridItem
      id="ABC"
      key="ABC"
      title="Cualquier nombre"
      url="https://localhosto/img.jpg"
    />
  </div>
</Fragment>
`;

exports[`Prueba en el componente <GifGrid /> Debe renderizar el compoenente 1`] = `
<Fragment>
  <h3
    className="animate__animated animate__fadeIn"
  >
    Dragon Ball
  </h3>
  <p
    className="animate__animated animate__flash"
  >
    Loading...
  </p>
  <div
    className="card-grid"
  />
</Fragment>
`;
